fix(ui): adjust z-index in UPopover and unify fontFamilyMap with dropdown

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -60,3 +60,8 @@ input::placeholder {
 input:focus {  
   @apply border-gray-600;  
 }  
+
+/* z index for popover add blocks */
+[data-reka-popper-content-wrapper] {
+  z-index: 20 !important;
+}
